--- a/style.css
+++ b/style.css
@@ -1,1 +1,149 @@
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+  font-variation-settings: "slnt" 0;
+  transition: all 0.2s;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+}
+
+article {
+  display: inline-flex;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+  font-weight: 700;
+  font-size: 0.9rem;
+}
+
+.avatar {
+  display: block;
+  width: 100px;
+  border-radius: 50%;
+  margin: 0.5rem auto;
+  margin-bottom: 1.5rem;
+}
+
+li {
+  list-style: none;
+  background-color: hsl(0, 0%, 20%);
+  color: hsl(0, 0%, 100%);
+  padding: 0.8rem 2.5rem;
+  border-radius: 0.5rem;
+  width: 15rem;
+  margin-top: 1rem;
+}
+
+li:hover {
+  background-color: hsl(75, 94%, 57%);
+  color: hsl(0, 0%, 8%);
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background-color: #141414;
+}
+
+.container {
+  background-color: hsl(0, 0%, 12%);
+  color: hsl(0, 0%, 100%);
+  max-width: 25rem;
+  padding: 2rem 2.5rem;
+  border-radius: 1rem;
+}
+
+.container > * {
+  display: flex;
+}
+
+p,
+address {
+  font-size: 14px;
+  color: rgb(163, 163, 163);
+  font-weight: 400;
+}
+
+h1 {
+  margin-bottom: 0.5rem;
+  font-size: 1.7rem;
+}
+
+.green-text {
+  color: hsl(75, 94%, 57%);
+  margin-top: 0.4rem;
+  margin-bottom: 1.5rem;
+  font-size: 1rem;
+  font-weight: 500;
+}
+
+/* small phones like iphone se */
+@media (min-width: 0px) and (max-width: 389px) {
+  .container {
+    padding: 1rem 1.5rem;
+  }
+  li {
+    width: 12rem;
+  }
+}
+
+/* for phones like iphone 12 (medium size)  */
+@media (max-width: 425px) and (min-width: 390px) {
+  .container {
+    padding: 1rem 1.5rem;
+  }
+  li {
+    width: 13rem;
+  }
+}
+
+/* for large phones like samsung ultra or iphone pro max phones */
+@media (max-width: 480px) and (min-width: 426px) {
+  .container {
+    padding: 1rem 1.5rem;
+  }
+  li {
+    width: 13rem;
+  }
+}
+
+/* for 4k monitors */
+@media (min-width: 2560px) {
+  .container {
+    padding: 2rem 4rem;
+    border-radius: 2rem;
+    max-width: 30rem;
+  }
+  h1 {
+    font-size: 2.5rem;
+  }
+  p {
+    font-size: 1.5rem;
+  }
+
+  .green-text {
+    font-size: 1.6rem;
+  }
+  .avatar {
+    margin-top: 0.5rem;
+    margin-bottom: 1.5rem;
+    width: auto;
+  }
+
+  a {
+    font-size: 1.4rem;
+  }
+  li {
+    width: 25em;
+  }
+}
 
